# esm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ESM.xlsx  calibrate.rs  dataframe.rs  esm_files.rs  esm_types.rs  expression.rs  fcs.rs  fit_ellipse.rs  flow.rs  fluorescence.rs  growth_rate.rs  lib.rs  main.rs  read_data.rs  summarise.rs  utils.rs  views.rs
src/plate_readers/: biotek.rs  bmg.rs  generic.rs  mod.rs  spectramax.rs  tecan.rs
tests/: fit_ellipse_tests.rs  flow_tests.rs  integration_tests.rs  plate_reader_full_tests.rs  plate_reader_tests.rs  read_tests.rs  write_tests.rs
